# myopenglesdemo

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg_play.cpp  native_window.cpp
app/src/main/java/com/lqc/myopenglesdemo/: MainActivity.kt  MyApp.kt  MyGLSurfaceView.kt  MySurfaceView.java  NativeActivity.kt  ResReadUtils.java  ShaderUtils.java  TextureActivity.kt  TextureUtils.java  Util.kt
app/src/main/java/com/lqc/myopenglesdemo/render/: CameraTextureRender.kt  SimpleRender.kt  StencilTestRender.kt  TextureRender.kt
app/src/main/res/layout/: activity_main.xml  activity_native.xml  activity_test.xml
app/src/main/res/raw/: fragment_filler_blur_shader.glsl  fragment_filler_shader.glsl
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
